--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/fmt"]
 	path = libs/fmt
 	url = https://github.com/gustavo-tomas/fmt.git
+[submodule "libs/glm"]
+	path = libs/glm
+	url = https://github.com/gustavo-tomas/glm.git
