--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=238,138
-Size=963,572
+Pos=94,33
+Size=598,312
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
@@ -15,4 +15,36 @@ Size=499,136
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
 Size=200,100
+
+[Window][Rendered window]
+Pos=0,403
+Size=800,197
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=800,600
+Collapsed=0
+
+[Window][Triangle controls]
+Pos=0,405
+Size=800,195
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Panel]
+Pos=0,398
+Size=800,202
+Collapsed=0
+DockId=0x00000006,0
+
+[Docking][Data]
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=800,396 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=800,403 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=800,401 CentralNode=1
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=800,197 Selected=0xACC5C88B
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=800,195 Selected=0x1ADC0B92
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=800,202 Selected=0xFFEA1EA4
 
