--- a/imgui.ini
+++ b/imgui.ini
@@ -24,7 +24,7 @@ DockId=0x00000002,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=800,600
+Size=888,599
 Collapsed=0
 
 [Window][Triangle controls]
@@ -34,17 +34,19 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Panel]
-Pos=0,498
-Size=800,102
+Pos=0,418
+Size=888,181
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
+
+[Window][Viewport]
+Pos=0,0
+Size=888,416
+Collapsed=0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=800,496 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=800,403 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=800,401 CentralNode=1
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=800,197 Selected=0xACC5C88B
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=800,195 Selected=0x1ADC0B92
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=800,102 Selected=0xFFEA1EA4
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=888,599 Split=Y
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=800,676 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=800,181 Selected=0xFFEA1EA4
 
