Adding test nodes

--- a/imgui.ini
+++ b/imgui.ini
@@ -34,19 +34,41 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Panel]
-Pos=0,442
-Size=800,158
+Pos=181,444
+Size=619,156
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Viewport]
-Pos=0,0
-Size=800,440
+Pos=181,0
+Size=619,442
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,386
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=531,414
+Collapsed=0
+
+[Window][Scene]
+Pos=0,0
+Size=179,600
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=800,440 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=800,158 Selected=0xFFEA1EA4
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=179,600 Selected=0xE192E354
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=619,600 Split=Y
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=800,442 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=800,156 Selected=0xFFEA1EA4
 
