--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Size=200,100
 Pos=0,403
 Size=800,197
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -34,19 +34,19 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Panel]
-Pos=0,457
-Size=800,143
+Pos=0,447
+Size=800,153
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Viewport]
 Pos=0,0
-Size=800,455
+Size=800,445
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=800,859 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=800,143 Selected=0xFFEA1EA4
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=800,445 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=800,153 Selected=0xFFEA1EA4
 
