--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=94,33
-Size=598,312
+Pos=97,66
+Size=617,333
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
@@ -34,19 +34,34 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Panel]
-Pos=0,447
-Size=800,153
+Pos=0,443
+Size=800,157
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][Viewport]
 Pos=0,0
-Size=800,445
+Size=800,442
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=531,438
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=353,398
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=595,306
+Collapsed=0
+
 [Docking][Data]
 DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=800,445 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=800,153 Selected=0xFFEA1EA4
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=800,442 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=800,157 Selected=0xFFEA1EA4
 
