Adding properties panel

--- a/imgui.ini
+++ b/imgui.ini
@@ -31,17 +31,17 @@ Collapsed=0
 Pos=0,405
 Size=800,195
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000003,0
 
 [Window][Panel]
 Pos=0,470
-Size=800,130
+Size=513,130
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Viewport]
 Pos=0,0
-Size=800,469
+Size=513,469
 Collapsed=0
 DockId=0x00000001,0
 
@@ -60,8 +60,16 @@ Pos=60,60
 Size=595,306
 Collapsed=0
 
+[Window][Properties]
+Pos=514,0
+Size=286,600
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=Y Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=800,469 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=800,130 Selected=0xFFEA1EA4
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,600 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=513,600 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=800,469 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=800,130 Selected=0xFFEA1EA4
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=286,600 Selected=0x199AB496
 
