--- a/imgui.ini
+++ b/imgui.ini
@@ -34,14 +34,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Panel]
-Pos=152,850
-Size=1467,154
+Pos=0,0
+Size=212,1004
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=152,0
-Size=1467,849
+Pos=213,0
+Size=1406,741
 Collapsed=0
 DockId=0x00000001,0
 
@@ -67,17 +67,17 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dummy]
-Pos=0,0
-Size=151,1004
+Pos=213,742
+Size=1406,262
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0x13926F0B
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=151,600 Selected=0x838CB20A
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=648,600 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=347,600 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=800,849 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=800,154 Selected=0xFFEA1EA4
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=212,1004 Selected=0xFFEA1EA4
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1707,1004 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1406,600 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=800,741 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=800,262 Selected=0x838CB20A
     DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=300,600 Selected=0x199AB496
 
