--- a/imgui.ini
+++ b/imgui.ini
@@ -34,14 +34,14 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Panel]
-Pos=295,872
-Size=1349,132
+Pos=1495,0
+Size=425,1004
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][Viewport]
-Pos=295,0
-Size=1349,871
+Pos=296,0
+Size=1198,796
 Collapsed=0
 DockId=0x00000001,0
 
@@ -62,22 +62,30 @@ Collapsed=0
 
 [Window][Properties]
 Pos=0,0
-Size=294,1004
+Size=295,1004
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Dummy]
+Pos=296,819
+Size=1198,185
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][Dummy]
-Pos=1645,0
-Size=275,1004
+[Window][Content Browser]
+Pos=296,797
+Size=1198,207
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0x13926F0B
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1644,1004 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=294,1004 Selected=0x199AB496
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1349,1004 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=800,871 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=800,132 Selected=0xFFEA1EA4
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=275,1004 Selected=0x838CB20A
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=1494,1004 Split=X
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=295,1004 Selected=0x199AB496
+    DockNode      ID=0x00000005 Parent=0x00000006 SizeRef=1198,1004 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1920,818 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=1198,796 CentralNode=1 Selected=0x13926F0B
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=1198,207 Selected=0xBF096F38
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1920,185 Selected=0x838CB20A
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=425,1004 Selected=0xFFEA1EA4
 
