Adding scene tab and renaming model position to translation

--- a/imgui.ini
+++ b/imgui.ini
@@ -31,7 +31,7 @@ Collapsed=0
 Pos=0,405
 Size=800,195
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000006,0
 
 [Window][Panel]
 Pos=1495,0
@@ -40,8 +40,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Viewport]
-Pos=296,0
-Size=1198,796
+Pos=350,0
+Size=1144,796
 Collapsed=0
 DockId=0x00000001,0
 
@@ -61,10 +61,10 @@ Size=595,306
 Collapsed=0
 
 [Window][Properties]
-Pos=0,0
-Size=295,1004
+Pos=0,657
+Size=349,347
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][Dummy]
 Pos=296,819
@@ -73,19 +73,35 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Content Browser]
-Pos=296,797
-Size=1198,207
+Pos=350,797
+Size=1144,207
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Scene]
+Pos=0,0
+Size=349,656
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][##Properties]
+Pos=0,719
+Size=316,285
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
-  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=1494,1004 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=295,1004 Selected=0x199AB496
-    DockNode      ID=0x00000005 Parent=0x00000006 SizeRef=1198,1004 Split=Y
-      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1920,818 Split=Y Selected=0x13926F0B
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=349,1004 Split=Y Selected=0xE192E354
+    DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=348,656 Split=Y Selected=0xE192E354
+      DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=316,718 Selected=0xE192E354
+      DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=316,285 Selected=0x83D51D6C
+    DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=348,347 Selected=0x199AB496
+  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=1570,1004 Split=X
+    DockNode      ID=0x00000006 Parent=0x0000000A SizeRef=1144,1004 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1920,818 Split=Y Selected=0x13926F0B
         DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=1198,796 CentralNode=1 Selected=0x13926F0B
         DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=1198,207 Selected=0xBF096F38
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1920,185 Selected=0x838CB20A
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=425,1004 Selected=0xFFEA1EA4
+      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,185 Selected=0x838CB20A
+    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=425,1004 Selected=0xFFEA1EA4
 
