Adding icons to windows tabs

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Size=200,100
 Pos=0,403
 Size=800,197
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000013,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -31,7 +31,7 @@ Collapsed=0
 Pos=0,405
 Size=800,195
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][Panel]
 Pos=1510,0
@@ -43,7 +43,7 @@ DockId=0x00000007,0
 Pos=350,0
 Size=1159,796
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000013,0
 
 [Window][Example: Custom rendering]
 Pos=60,60
@@ -79,10 +79,9 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene]
-Pos=0,0
-Size=349,656
+Size=349,796
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000F,0
 
 [Window][##Properties]
 Pos=0,719
@@ -90,18 +89,82 @@ Size=316,285
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][Properties]
+Pos=0,802
+Size=349,202
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][ Properties]
+Pos=0,797
+Size=349,207
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][ Properties]
+Pos=0,571
+Size=348,433
+Collapsed=0
+DockId=0x00000016,0
+
+[Window][ Scene]
+Pos=60,60
+Size=150,100
+Collapsed=0
+
+[Window][ Viewport]
+Pos=349,0
+Size=1149,796
+Collapsed=0
+DockId=0x00000013,0
+
+[Window][ Content Browser]
+Pos=349,797
+Size=1149,207
+Collapsed=0
+DockId=0x00000014,0
+
+[Window][ Content Browser]
+Pos=60,60
+Size=218,469
+Collapsed=0
+
+[Window][ Scene]
+Pos=0,0
+Size=348,570
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][ Panel]
+Pos=1499,0
+Size=421,1004
+Collapsed=0
+DockId=0x00000018,0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
-  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=349,1004 Split=Y Selected=0xE192E354
-    DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=348,656 Split=Y Selected=0xE192E354
-      DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=316,718 Selected=0xE192E354
-      DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=316,285 Selected=0x83D51D6C
-    DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=348,347 Selected=0x199AB496
-  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=1570,1004 Split=X
-    DockNode      ID=0x00000006 Parent=0x0000000A SizeRef=1159,1004 Split=Y
-      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1920,818 Split=Y Selected=0x13926F0B
-        DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=1198,796 CentralNode=1 Selected=0x13926F0B
-        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=1198,207 Selected=0xBF096F38
-      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,185 Selected=0x838CB20A
-    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=410,1004 Selected=0xFFEA1EA4
+DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
+  DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
+    DockNode              ID=0x00000011 Parent=0x00000017 SizeRef=348,1004 Split=Y Selected=0xEECECE39
+      DockNode            ID=0x00000015 Parent=0x00000011 SizeRef=348,570 Selected=0x87C84A56
+      DockNode            ID=0x00000016 Parent=0x00000011 SizeRef=348,433 Selected=0xEECECE39
+    DockNode              ID=0x00000012 Parent=0x00000017 SizeRef=1149,1004 Split=X
+      DockNode            ID=0x00000006 Parent=0x00000012 SizeRef=1509,1004 Split=X
+        DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=349,1004 Split=Y Selected=0xE192E354
+          DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=348,656 Split=Y Selected=0xE192E354
+            DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=316,718 Split=Y Selected=0xE192E354
+              DockNode    ID=0x0000000D Parent=0x0000000B SizeRef=349,801 Split=Y Selected=0xE192E354
+                DockNode  ID=0x0000000F Parent=0x0000000D SizeRef=349,796 Selected=0xE192E354
+                DockNode  ID=0x00000010 Parent=0x0000000D SizeRef=349,207 Selected=0x8F595F24
+              DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=349,202 Selected=0xC072CF41
+            DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=316,285 Selected=0x83D51D6C
+          DockNode        ID=0x00000005 Parent=0x00000009 SizeRef=348,347 Selected=0x199AB496
+        DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=1570,1004 Split=Y
+          DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1920,818 Split=Y Selected=0x13926F0B
+            DockNode      ID=0x00000001 Parent=0x00000002 SizeRef=1198,796 Split=Y Selected=0x80C34F4E
+              DockNode    ID=0x00000013 Parent=0x00000001 SizeRef=1159,796 CentralNode=1 Selected=0x80C34F4E
+              DockNode    ID=0x00000014 Parent=0x00000001 SizeRef=1159,207 Selected=0xF6B7AC0D
+            DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1198,207 Selected=0xBF096F38
+          DockNode        ID=0x00000003 Parent=0x0000000A SizeRef=1920,185 Selected=0x838CB20A
+      DockNode            ID=0x00000007 Parent=0x00000012 SizeRef=410,1004 Selected=0xFFEA1EA4
+  DockNode                ID=0x00000018 Parent=0x8B93E3BD SizeRef=421,1004 Selected=0x10F9EF7B
 
