--- a/imgui.ini
+++ b/imgui.ini
@@ -137,15 +137,21 @@ DockId=0x00000015,0
 
 [Window][ Panel]
 Pos=1499,0
-Size=421,852
+Size=421,538
 Collapsed=0
-DockId=0x00000019,0
+DockId=0x0000001B,0
 
 [Window][ Settings]
 Pos=1499,853
 Size=421,151
 Collapsed=0
 DockId=0x0000001A,0
+
+[Window][ Materials]
+Pos=1499,539
+Size=421,313
+Collapsed=0
+DockId=0x0000001C,0
 
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
@@ -173,6 +179,8 @@ DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004
           DockNode        ID=0x00000003 Parent=0x0000000A SizeRef=1920,185 Selected=0x838CB20A
       DockNode            ID=0x00000007 Parent=0x00000012 SizeRef=410,1004 Selected=0xFFEA1EA4
   DockNode                ID=0x00000018 Parent=0x8B93E3BD SizeRef=421,1004 Split=Y Selected=0x10F9EF7B
-    DockNode              ID=0x00000019 Parent=0x00000018 SizeRef=421,852 Selected=0x10F9EF7B
+    DockNode              ID=0x00000019 Parent=0x00000018 SizeRef=421,852 Split=Y Selected=0x10F9EF7B
+      DockNode            ID=0x0000001B Parent=0x00000019 SizeRef=421,538 Selected=0x10F9EF7B
+      DockNode            ID=0x0000001C Parent=0x00000019 SizeRef=421,313 Selected=0x26F38AF4
     DockNode              ID=0x0000001A Parent=0x00000018 SizeRef=421,151 Selected=0x4CE2361F
 
