--- a/imgui.ini
+++ b/imgui.ini
@@ -137,9 +137,9 @@ DockId=0x00000015,0
 
 [Window][ Panel]
 Pos=1499,0
-Size=421,538
+Size=421,392
 Collapsed=0
-DockId=0x0000001B,0
+DockId=0x0000001F,0
 
 [Window][ Settings]
 Pos=1499,853
@@ -152,6 +152,18 @@ Pos=1499,539
 Size=421,313
 Collapsed=0
 DockId=0x0000001C,0
+
+[Window][Status]
+Pos=1499,372
+Size=421,166
+Collapsed=0
+DockId=0x0000001E,0
+
+[Window][ Status]
+Pos=1499,393
+Size=421,145
+Collapsed=0
+DockId=0x00000020,0
 
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
@@ -180,7 +192,11 @@ DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004
       DockNode            ID=0x00000007 Parent=0x00000012 SizeRef=410,1004 Selected=0xFFEA1EA4
   DockNode                ID=0x00000018 Parent=0x8B93E3BD SizeRef=421,1004 Split=Y Selected=0x10F9EF7B
     DockNode              ID=0x00000019 Parent=0x00000018 SizeRef=421,852 Split=Y Selected=0x10F9EF7B
-      DockNode            ID=0x0000001B Parent=0x00000019 SizeRef=421,538 Selected=0x10F9EF7B
+      DockNode            ID=0x0000001B Parent=0x00000019 SizeRef=421,538 Split=Y Selected=0x10F9EF7B
+        DockNode          ID=0x0000001D Parent=0x0000001B SizeRef=421,371 Split=Y Selected=0x10F9EF7B
+          DockNode        ID=0x0000001F Parent=0x0000001D SizeRef=421,392 Selected=0x10F9EF7B
+          DockNode        ID=0x00000020 Parent=0x0000001D SizeRef=421,145 Selected=0x3D84C683
+        DockNode          ID=0x0000001E Parent=0x0000001B SizeRef=421,166 Selected=0x559F4DD0
       DockNode            ID=0x0000001C Parent=0x00000019 SizeRef=421,313 Selected=0x26F38AF4
     DockNode              ID=0x0000001A Parent=0x00000018 SizeRef=421,151 Selected=0x4CE2361F
 
