--- a/imgui.ini
+++ b/imgui.ini
@@ -131,9 +131,9 @@ Collapsed=0
 
 [Window][ Scene]
 Pos=0,0
-Size=427,679
+Size=427,746
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000021,0
 
 [Window][ Panel]
 Pos=1499,0
@@ -165,11 +165,19 @@ Size=421,145
 Collapsed=0
 DockId=0x00000020,0
 
+[Window][ Properties]
+Pos=0,747
+Size=427,257
+Collapsed=0
+DockId=0x00000022,0
+
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
   DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
     DockNode              ID=0x00000011 Parent=0x00000017 SizeRef=427,1004 Split=Y Selected=0xEECECE39
-      DockNode            ID=0x00000015 Parent=0x00000011 SizeRef=348,679 Selected=0x87C84A56
+      DockNode            ID=0x00000015 Parent=0x00000011 SizeRef=348,679 Split=Y Selected=0x87C84A56
+        DockNode          ID=0x00000021 Parent=0x00000015 SizeRef=427,746 Selected=0x87C84A56
+        DockNode          ID=0x00000022 Parent=0x00000015 SizeRef=427,257 Selected=0x7BFA6FE8
       DockNode            ID=0x00000016 Parent=0x00000011 SizeRef=348,324 Selected=0xEECECE39
     DockNode              ID=0x00000012 Parent=0x00000017 SizeRef=1070,1004 Split=X
       DockNode            ID=0x00000006 Parent=0x00000012 SizeRef=1509,1004 Split=X
