--- a/imgui.ini
+++ b/imgui.ini
@@ -160,10 +160,10 @@ Collapsed=0
 DockId=0x0000001E,0
 
 [Window][ Status]
-Pos=1499,393
-Size=421,145
+Pos=1499,389
+Size=421,149
 Collapsed=0
-DockId=0x00000020,0
+DockId=0x00000026,0
 
 [Window][ Properties]
 Pos=0,747
@@ -176,6 +176,12 @@ Pos=0,598
 Size=427,148
 Collapsed=0
 DockId=0x00000024,0
+
+[Window][ Info]
+Pos=1499,0
+Size=421,388
+Collapsed=0
+DockId=0x00000025,0
 
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
@@ -211,7 +217,9 @@ DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004
       DockNode            ID=0x0000001B Parent=0x00000019 SizeRef=421,538 Split=Y Selected=0x10F9EF7B
         DockNode          ID=0x0000001D Parent=0x0000001B SizeRef=421,371 Split=Y Selected=0x10F9EF7B
           DockNode        ID=0x0000001F Parent=0x0000001D SizeRef=421,392 Selected=0x10F9EF7B
-          DockNode        ID=0x00000020 Parent=0x0000001D SizeRef=421,145 Selected=0x3D84C683
+          DockNode        ID=0x00000020 Parent=0x0000001D SizeRef=421,145 Split=Y Selected=0x3D84C683
+            DockNode      ID=0x00000025 Parent=0x00000020 SizeRef=421,388 Selected=0x23D510CB
+            DockNode      ID=0x00000026 Parent=0x00000020 SizeRef=421,149 Selected=0x3D84C683
         DockNode          ID=0x0000001E Parent=0x0000001B SizeRef=421,166 Selected=0x559F4DD0
       DockNode            ID=0x0000001C Parent=0x00000019 SizeRef=421,123 Selected=0x26F38AF4
     DockNode              ID=0x0000001A Parent=0x00000018 SizeRef=421,341 Selected=0x4CE2361F
