--- a/imgui.ini
+++ b/imgui.ini
@@ -23,8 +23,8 @@ Collapsed=0
 DockId=0x00000013,0
 
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=1920,1004
+Pos=0,24
+Size=1920,980
 Collapsed=0
 
 [Window][Triangle controls]
@@ -113,8 +113,8 @@ Size=150,100
 Collapsed=0
 
 [Window][ Viewport]
-Pos=428,0
-Size=1070,796
+Pos=428,24
+Size=1070,772
 Collapsed=0
 DockId=0x00000013,0
 
@@ -130,8 +130,8 @@ Size=218,469
 Collapsed=0
 
 [Window][ Scene]
-Pos=0,0
-Size=427,597
+Pos=0,24
+Size=427,583
 Collapsed=0
 DockId=0x00000023,0
 
@@ -142,14 +142,14 @@ Collapsed=0
 DockId=0x0000001F,0
 
 [Window][ Settings]
-Pos=1499,693
-Size=421,311
+Pos=1499,352
+Size=421,652
 Collapsed=0
 DockId=0x0000001A,0
 
 [Window][ Materials]
-Pos=1499,470
-Size=421,222
+Pos=1499,141
+Size=421,210
 Collapsed=0
 DockId=0x0000001C,0
 
@@ -160,31 +160,35 @@ Collapsed=0
 DockId=0x0000001E,0
 
 [Window][ Status]
-Pos=1499,352
-Size=421,117
+Pos=1499,24
+Size=421,116
 Collapsed=0
 DockId=0x00000026,0
 
 [Window][ Properties]
-Pos=0,747
-Size=427,257
+Pos=0,753
+Size=427,251
 Collapsed=0
 DockId=0x00000022,0
 
 [Window][ Camera]
-Pos=0,598
-Size=427,148
+Pos=0,608
+Size=427,144
 Collapsed=0
 DockId=0x00000024,0
 
-[Window][ Info]
-Pos=1499,0
-Size=421,351
+[Window][Main Menu]
+Pos=398,191
+Size=150,100
 Collapsed=0
-DockId=0x00000025,0
+
+[Window][ Info]
+Pos=3,25
+Size=650,300
+Collapsed=0
 
 [Docking][Data]
-DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004 Split=X Selected=0xFFEA1EA4
+DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,980 Split=X Selected=0xFFEA1EA4
   DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
     DockNode              ID=0x00000011 Parent=0x00000017 SizeRef=427,1004 Split=Y Selected=0xEECECE39
       DockNode            ID=0x00000015 Parent=0x00000011 SizeRef=348,679 Split=Y Selected=0x87C84A56
@@ -213,14 +217,14 @@ DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1004
           DockNode        ID=0x00000003 Parent=0x0000000A SizeRef=1920,185 Selected=0x838CB20A
       DockNode            ID=0x00000007 Parent=0x00000012 SizeRef=410,1004 Selected=0xFFEA1EA4
   DockNode                ID=0x00000018 Parent=0x8B93E3BD SizeRef=421,1004 Split=Y Selected=0x10F9EF7B
-    DockNode              ID=0x00000019 Parent=0x00000018 SizeRef=421,692 Split=Y Selected=0x10F9EF7B
-      DockNode            ID=0x0000001B Parent=0x00000019 SizeRef=421,469 Split=Y Selected=0x10F9EF7B
+    DockNode              ID=0x00000019 Parent=0x00000018 SizeRef=421,327 Split=Y Selected=0x10F9EF7B
+      DockNode            ID=0x0000001B Parent=0x00000019 SizeRef=421,116 Split=Y Selected=0x10F9EF7B
         DockNode          ID=0x0000001D Parent=0x0000001B SizeRef=421,371 Split=Y Selected=0x10F9EF7B
           DockNode        ID=0x0000001F Parent=0x0000001D SizeRef=421,392 Selected=0x10F9EF7B
           DockNode        ID=0x00000020 Parent=0x0000001D SizeRef=421,145 Split=Y Selected=0x3D84C683
             DockNode      ID=0x00000025 Parent=0x00000020 SizeRef=421,351 Selected=0x23D510CB
             DockNode      ID=0x00000026 Parent=0x00000020 SizeRef=421,117 Selected=0x3D84C683
         DockNode          ID=0x0000001E Parent=0x0000001B SizeRef=421,166 Selected=0x559F4DD0
-      DockNode            ID=0x0000001C Parent=0x00000019 SizeRef=421,222 Selected=0x26F38AF4
-    DockNode              ID=0x0000001A Parent=0x00000018 SizeRef=421,311 Selected=0x4CE2361F
+      DockNode            ID=0x0000001C Parent=0x00000019 SizeRef=421,210 Selected=0x26F38AF4
+    DockNode              ID=0x0000001A Parent=0x00000018 SizeRef=421,652 Selected=0x4CE2361F
 
