--- a/imgui.ini
+++ b/imgui.ini
@@ -187,6 +187,50 @@ Pos=3,25
 Size=650,300
 Collapsed=0
 
+[Window][Choose File##ChooseFileDlgKey]
+Pos=512,207
+Size=1043,409
+Collapsed=0
+
+[Window][Save File##ChooseFileDlgKey]
+Pos=385,204
+Size=1057,494
+Collapsed=0
+
+[Window][Save File##SaveFileDlgKey]
+Pos=60,60
+Size=1043,591
+Collapsed=0
+
+[Window][Save Scene##ChooseFileDlgKey]
+Pos=543,230
+Size=816,539
+Collapsed=0
+
+[Table][0xADBF0D5F,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x6CA846DA,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x040100A5,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x95B1C897,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x7469B093,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x09BE3702,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,1056 Split=X Selected=0xFFEA1EA4
   DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
