Editor QOL improvements

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Size=200,100
 Pos=0,403
 Size=800,197
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000027,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,24
@@ -43,7 +43,7 @@ DockId=0x00000007,0
 Pos=350,0
 Size=1159,796
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000027,0
 
 [Window][Example: Custom rendering]
 Pos=60,60
@@ -116,7 +116,7 @@ Collapsed=0
 Pos=428,24
 Size=1070,848
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000027,0
 
 [Window][ Content Browser]
 Pos=428,873
@@ -183,8 +183,8 @@ Size=150,100
 Collapsed=0
 
 [Window][ Info]
-Pos=3,25
-Size=650,300
+Pos=620,321
+Size=675,365
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
@@ -206,6 +206,17 @@ Collapsed=0
 Pos=543,230
 Size=816,539
 Collapsed=0
+
+[Window][ Instructions]
+Pos=577,291
+Size=778,402
+Collapsed=0
+
+[Window][##Play]
+Pos=428,772
+Size=1070,100
+Collapsed=0
+DockId=0x00000028,0
 
 [Table][0xADBF0D5F,4]
 RefScale=16
@@ -239,6 +250,10 @@ Column 0  Sort=0v
 RefScale=16
 Column 0  Sort=0v
 
+[Table][0x4261E537,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,1056 Split=X Selected=0xFFEA1EA4
   DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
@@ -263,7 +278,9 @@ DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,105
         DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=1570,1004 Split=Y
           DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1920,818 Split=Y Selected=0x13926F0B
             DockNode      ID=0x00000001 Parent=0x00000002 SizeRef=1198,796 Split=Y Selected=0x80C34F4E
-              DockNode    ID=0x00000013 Parent=0x00000001 SizeRef=1159,796 CentralNode=1 Selected=0x80C34F4E
+              DockNode    ID=0x00000013 Parent=0x00000001 SizeRef=1159,796 Split=Y Selected=0x80C34F4E
+                DockNode  ID=0x00000027 Parent=0x00000013 SizeRef=1070,747 CentralNode=1 Selected=0x80C34F4E
+                DockNode  ID=0x00000028 Parent=0x00000013 SizeRef=1070,100 Selected=0x7A443D91
               DockNode    ID=0x00000014 Parent=0x00000001 SizeRef=1159,207 Selected=0xF6B7AC0D
             DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1198,207 Selected=0xBF096F38
           DockNode        ID=0x00000003 Parent=0x0000000A SizeRef=1920,185 Selected=0x838CB20A
