Saving test scene to file

--- a/imgui.ini
+++ b/imgui.ini
@@ -254,6 +254,22 @@ Column 0  Sort=0v
 RefScale=16
 Column 0  Sort=0v
 
+[Table][0x70ABE1B6,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x917399B2,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0xF52A84A0,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x3DB0E67F,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,1056 Split=X Selected=0xFFEA1EA4
   DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
