Finishing open scene feature

--- a/imgui.ini
+++ b/imgui.ini
@@ -218,6 +218,11 @@ Size=1070,100
 Collapsed=0
 DockId=0x00000028,0
 
+[Window][Open Scene##ChooseFileDlgKey]
+Pos=583,262
+Size=782,477
+Collapsed=0
+
 [Table][0xADBF0D5F,4]
 RefScale=16
 Column 0  Sort=0v
@@ -267,6 +272,14 @@ RefScale=16
 Column 0  Sort=0v
 
 [Table][0x3DB0E67F,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x639522A1,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x852032AA,4]
 RefScale=16
 Column 0  Sort=0v
 
