Adding new scene feature

--- a/imgui.ini
+++ b/imgui.ini
@@ -223,6 +223,11 @@ Pos=583,262
 Size=782,477
 Collapsed=0
 
+[Window][New Scene##ChooseFileDlgKey]
+Pos=574,271
+Size=767,461
+Collapsed=0
+
 [Table][0xADBF0D5F,4]
 RefScale=16
 Column 0  Sort=0v
@@ -280,6 +285,18 @@ RefScale=16
 Column 0  Sort=0v
 
 [Table][0x852032AA,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x8B642838,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x43FE4AE7,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0xAB0F407E,4]
 RefScale=16
 Column 0  Sort=0v
 
