Adding editable scene name

--- a/imgui.ini
+++ b/imgui.ini
@@ -320,6 +320,14 @@ Column 0  Sort=0v
 RefScale=16
 Column 0  Sort=0v
 
+[Table][0x48A4FEBC,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0xAE11EEB7,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,980 Split=X Selected=0xFFEA1EA4
   DockNode                  ID=0x00000017 Parent=0x8B93E3BD SizeRef=1498,1004 Split=X
@@ -346,7 +354,7 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,9
             DockNode        ID=0x00000001 Parent=0x00000002 SizeRef=1198,796 Split=Y Selected=0x80C34F4E
               DockNode      ID=0x00000013 Parent=0x00000001 SizeRef=1159,796 Split=Y Selected=0x80C34F4E
                 DockNode    ID=0x00000027 Parent=0x00000013 SizeRef=1070,747 Split=Y Selected=0x80C34F4E
-                  DockNode  ID=0x00000029 Parent=0x00000027 SizeRef=1070,747 CentralNode=1 Selected=0x80C34F4E
+                  DockNode  ID=0x00000029 Parent=0x00000027 SizeRef=1070,671 CentralNode=1 Selected=0x80C34F4E
                   DockNode  ID=0x0000002A Parent=0x00000027 SizeRef=1070,100 Selected=0x625FFC87
                 DockNode    ID=0x00000028 Parent=0x00000013 SizeRef=1070,100 Selected=0x7A443D91
               DockNode      ID=0x00000014 Parent=0x00000001 SizeRef=1159,207 Selected=0xF6B7AC0D
