Adding msdf gen lib

--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,6 @@
 	path = libs/sol2
 	url = https://github.com/ThePhD/sol2.git
 	branch = main
+[submodule "libs/msdf_atlas_gen"]
+	path = libs/msdf_atlas_gen
+	url = https://github.com/gustavo-tomas/msdf-atlas-gen.git
