--- a/imgui.ini
+++ b/imgui.ini
@@ -240,6 +240,12 @@ Size=421,286
 Collapsed=0
 DockId=0x0000002C,0
 
+[Window][Profiler]
+Pos=1499,24
+Size=421,348
+Collapsed=0
+DockId=0x00000026,1
+
 [Table][0xADBF0D5F,4]
 RefScale=16
 Column 0  Sort=0v
@@ -372,7 +378,7 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,24 Size=1920,9
           DockNode          ID=0x0000001F Parent=0x0000001D SizeRef=421,392 Selected=0x10F9EF7B
           DockNode          ID=0x00000020 Parent=0x0000001D SizeRef=421,145 Split=Y Selected=0x3D84C683
             DockNode        ID=0x00000025 Parent=0x00000020 SizeRef=421,351 Selected=0x23D510CB
-            DockNode        ID=0x00000026 Parent=0x00000020 SizeRef=421,117 Selected=0x3D84C683
+            DockNode        ID=0x00000026 Parent=0x00000020 SizeRef=421,117 Selected=0x1E6EB881
         DockNode            ID=0x0000001E Parent=0x0000001B SizeRef=421,166 Selected=0x559F4DD0
       DockNode              ID=0x0000001C Parent=0x00000019 SizeRef=421,210 Split=Y Selected=0x26F38AF4
         DockNode            ID=0x0000002B Parent=0x0000001C SizeRef=421,371 Selected=0x26F38AF4
