--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 [submodule "libs/implot"]
 	path = libs/implot
 	url = https://github.com/epezent/implot.git
+[submodule "libs/portable-file-dialogs"]
+	path = libs/portable-file-dialogs
+	url = https://github.com/samhocevar/portable-file-dialogs.git
